# DeveloppementMicroServices

./: README.md
FASTAPI/projectAPI/: note.txt
FASTAPI/todo_app/: main.py  models.py  note.txt  pyproject.toml  requiremenents.txt
NATS/: cheatsheet.py
NATS/chat_multi_client/: client.py  server.py
NATS/compteur/: receiver.py  sender.py
NATS/cours_installer/: install-nats.py  main.py  requests.py  subscription.py
NATS/response/: client.py  schema.txt  server.py
NATS/sujet_hierarchise/: publish.py  subscrib-all.py  subscribe-stras.py  subscribe.py
REQUEST/API/: request.py
api_django/: db.sqlite3  note_cheat_sheet.txt
api_django/api_django/: settings.py  urls.py
api_django/monapi/: models.py  serializer.py  urls.py  views.py
api_django/monapi/migrations/: 0001_initial.py
api_django/service_client/: models.py  serializer.py  urls.py  views.py
api_django/service_client/migrations/: 0001_initial.py
projectAPI/: api.py  pyproject.toml
todo_app/: .env  docker-compose.yml  main.py  models.py  note.txt  pyproject.toml
tp_test/: documents.txt  requirements.txt
tp_test/ii.1/: db.sqlite3  manage.py  note.txt
tp_test/ii.1/api_test_app/: apps.py  models.py  urls.py  views.py
tp_test/ii.1/tp_test/: asgi.py  settings.py  urls.py  wsgi.py
tp_test/ii.2/: note.txt
tp_test/iii/iii1-2/: envoi_message.py  note.txt  recepetion_message.py
tp_test/iii/iii3/: publish.py  verifie_date.py  verifie_montant.py  verifie_numerocompte.py
